# m00sic

./: .gitignore  LICENSE  README.md  music_gen.ipynb  setup.cfg  setup.py
generated_samples/: generated_2021-04-18 19:29:42.024605.midi
m00sic/: constants.py  util.py
notebooks/: cantus-firmus.ipynb  exp.ipynb  musicgen.ipynb
src/m00sic/: __init__.py  constants.py  core.py  durations.py  optim.py  run.py  scales.py  util.py  utils.py
