[metadata]
name = m00sic
version = 0.0.1
author = Miria Feng and Christopher Wolff
author_email = cwolff98@gmail.com
description = Tools for algorithmic music generation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwolffff/m00sic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
